--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for Perl extension Array-PrintCols-EastAsian
 
 {{$NEXT}}
 
+    - Fix README.md.
+
 0.03 2013-12-25T08:45:27Z
 
     - Add exception handling for pretty_print_cols().
